Fix background fade and make sure it always covers the entire page

--- a/static/style/main.scss
+++ b/static/style/main.scss
@@ -25,13 +25,19 @@ body{
 	background-color: $baseBackgroundColor;
 	font-family: 'Lato', sans-serif;
 
-	.body-bg{
+	&.ll-loaded .body-bg{
 		position: absolute;
 		top: 0;
 		right: 0;
 		bottom: 0;
 		left: 0;
 		opacity: 0;
+	}
+
+	.body-bg{
+		@include fade-in();
+		background-color: $baseBackgroundColor;
+		opacity: 1;
 	}
 
 	a{
